--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -9,6 +9,7 @@
       "tablet",
       "2in1"
     ],
+    "routerMap": "$profile:routerMap",
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
