--- a/oh-package.json5
+++ b/oh-package.json5
@@ -2,7 +2,8 @@
   "modelVersion": "5.0.1",
   "description": "Please describe the basic information.",
   "dependencies": {
-    "@ohos/axios": "^2.2.6"
+    "@ohos/axios": "^2.2.6",
+    "@ohmos/calendar": "^2.1.4"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.19",
