--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -14,7 +14,12 @@
     "installationFree": false,
     "pages": "$profile:main_pages",
     "requestPermissions": [
-      { "name": "ohos.permission.INTERNET" }
+      { "name": "ohos.permission.INTERNET" },
+      {
+        "name": "ohos.permission.MICROPHONE",
+        "usedScene": {},
+        "reason": "$string:reason_microphone"
+      }
     ],
     "abilities": [
       {
